--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "next": "10.0.1",
+    "polished": "^4.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^3.11.0",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.2.1",
+    "uuidv4": "^6.2.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/styled-components": "^5.1.4",
+    "typescript": "^4.0.5"
   }
 }
