--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
+    "react-resizable": "^1.11.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "uuidv4": "^6.2.5"
@@ -22,6 +23,14 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   }
 }
